syntax = "proto3";
package user;

import "rpc.proto";

option go_package = "douyin-easy/grpc_gen/user;user";

message User {
  int64 id = 1; // 用户id
  string name = 2; // 用户名称
  string avatar = 3; // 用户头像
  int64 video_count = 4; // 用户视频发布数
  int64 favorite_count = 5; // 用户点赞喜欢视频数
  int64 follow_count = 6; // 关注总数
  int64 follower_count = 7; // 粉丝总数
}

message CheckLoginUserRequest {
  string username = 1;
  string password = 2;
}

message CheckLoginUserResponse {
  int64 user_id = 1;
  rpc.BaseResponse base_response = 2;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string avatar = 3;
}

message CreateUserResponse {
  User user = 1;
  rpc.BaseResponse base_response = 2;
}

message QueryUsersRequest {
  repeated int64 user_ids = 1;
}

message QueryUsersResponse {
  repeated User user_list = 1;
  rpc.BaseResponse base_response = 2;
}

message QueryUserRequest {
  int64 user_id = 1;
}

message QueryUserResponse {
  User user = 1;
  rpc.BaseResponse base_response = 2;
}

service UserManagement {

  rpc CheckLoginUser(CheckLoginUserRequest) returns (CheckLoginUserResponse) {}

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}

  rpc QueryUsers(QueryUsersRequest) returns (QueryUsersResponse) {}

  rpc QueryUser(QueryUserRequest) returns (QueryUserResponse) {}

}
